# xn_wechat_blufi

./: .gitignore  README.md
blefi_wechat/: project.config.json  project.private.config.json
blufi_wechat/: app.json  project.config.json  project.private.config.json
blufi_wechat/pages/index/: index.js  index.wxml  index.wxss
blufi_wechat/utils/: blufi.js  blufi_crypto.js
xn_blefi_esp32/: CMakeLists.txt  README.md  sdkconfig.defaults
xn_blefi_esp32/components/xn_blufi/: CMakeLists.txt  README.md  xn_blufi.c  xn_blufi_gatt.c  xn_blufi_security.c
xn_blefi_esp32/components/xn_blufi/include/: xn_blufi_internal.h
xn_blefi_esp32/components/xn_web_wifi_manger/: CMakeLists.txt
xn_blefi_esp32/components/xn_web_wifi_manger/include/: storage_module.h  web_module.h  wifi_module.h  xn_wifi_manage.h
xn_blefi_esp32/components/xn_web_wifi_manger/src/: storage_module.c  web_module.c  wifi_module.c  xn_wifi_manage.c
xn_blefi_esp32/components/xn_web_wifi_manger/wifi_spiffs/: app.css  app.js  index.html
xn_blefi_esp32/main/: CMakeLists.txt  app_blufi.h  main.c
xn_blufi_esp32/: CMakeLists.txt  README.md  sdkconfig.defaults
xn_blufi_esp32/components/xn_blufi/: CMakeLists.txt  README.md  xn_blufi.c  xn_blufi_security.c  xn_wifi_manager.c  xn_wifi_storage.c
xn_blufi_esp32/components/xn_blufi/include/: xn_blufi.h  xn_blufi_internal.h  xn_wifi_manager.h  xn_wifi_storage.h
xn_blufi_esp32/main/: CMakeLists.txt  app_blufi.c  main.c
